--- a/contribution/lang/de.json
+++ b/contribution/lang/de.json
@@ -51,7 +51,7 @@
  	 	 	 	"eng": "Enter pin code"
  	 	 	},
  	 	 	"story": {
- 	 	 	 	"trans": "Du hast einen alten, verschlossenen, Safe gefunden! Sieht so aus als wäre dort ein Zettel mit Text darauf...",
+ 	 	 	 	"trans": "Du hast einen alten, verschlossenen Safe gefunden! Sieht so aus als wäre dort ein Zettel mit Text darauf...",
  	 	 	 	"eng": "You found an old locked safe box, there seems like a post-it with some text written on it."
  	 	 	},
  	 	 	"title": {
